<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/parent_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/switch_theme"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_setting_theme"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/sub_title_setting_theme" />

                </LinearLayout>

                <Switch
                    android:id="@+id/switch_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </RelativeLayout>

            <include layout="@layout/include_row_separator" />

            <LinearLayout
                android:id="@+id/btn_wallpaper_columns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_display_wallpaper"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_wallpaper_columns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="" />

            </LinearLayout>

            <include layout="@layout/include_row_separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/switch_notif"
                    android:layout_toLeftOf="@+id/switch_notif"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_setting_notification"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/sub_title_setting_notification" />

                </LinearLayout>

                <Switch
                    android:id="@+id/switch_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </RelativeLayout>

            <include layout="@layout/include_row_separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/btn_clear_cache"
                    android:layout_toLeftOf="@+id/btn_clear_cache"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_setting_clear_cache"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_cache_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/btn_clear_cache"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_delete"
                    app:tint="#b9b9b9" />

            </RelativeLayout>

            <include layout="@layout/include_row_separator" />

            <LinearLayout
                android:id="@+id/btn_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_path"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="" />

            </LinearLayout>

            <include layout="@layout/include_row_separator" />

            <LinearLayout
                android:id="@+id/btn_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_copyright"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/sub_title_setting_copyright" />

            </LinearLayout>

            <include layout="@layout/include_row_separator" />

            <LinearLayout
                android:id="@+id/btn_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_privacy"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/sub_title_setting_privacy" />

            </LinearLayout>

            <include layout="@layout/include_row_separator" />

            <LinearLayout
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_about"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/sub_title_setting_about" />

            </LinearLayout>

            <include layout="@layout/include_row_separator" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>